Fix for horizontal scrolling on mobile?

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,9 @@
 
 #root {
     background-color: black;
+    width: 100vw;
+    height: 100vh;
+    overflow: auto;
 }
 
 .statName {
@@ -54,3 +57,5 @@ p{
     width: 15px;
     height: 15px;
 }
+
+
